git-annex (4.20131025) UNRELEASED; urgency=low

  * The "git annex content" command is renamed to "git annex wanted".
  * assistant: When autostarted, wait 5 seconds before running the startup
    scan, to avoid contending with the user's desktop login process.
  * webapp: When setting up a bare shared repository, enable non-fast-forward
    pushes.
  * sync: Show a hint about receive.denyNonFastForwards when a push fails.
  * directory, webdav: Fix bug introduced in version 4.20131002 that
    caused the chunkcount file to not be written. Work around repositories
    without such a file, so files can still be retreived from them.
  * assistant: Automatically repair damanged git repository, if it can
    be done without losing data.
  * assistant: Support repairing git remotes that are locally accessible
    (eg, on removable drives).
  * add: Fix reversion in 4.20130827 when adding unlocked files that have
    not yet been committed.

 -- Joey Hess <joeyh@debian.org>  Sat, 26 Oct 2013 12:11:48 -0400

git-annex (4.20131024) unstable; urgency=low

  * webapp: Fix bug when adding a remote and git-remote-gcrypt
    is not installed.
  * The assitant can now run scheduled incremental fsck jobs on the local
    repository and remotes. These can be configured using vicfg or with the
    webapp.
  * repair: New command, which can repair damaged git repositories
    (even ones not using git-annex).
  * webapp: When git repository damange is detected, repairs can be
    done using the webapp UI.
  * Automatically and safely detect and recover from dangling
    .git/annex/index.lock files, which would prevent git from
    committing to the git-annex branch, eg after a crash.
  * assistant: Detect stale git lock files at startup time, and remove them.
  * addurl: Better sanitization of generated filenames.
  * Better sanitization of problem characters when generating URL and WORM
    keys.
  * The control socket path passed to ssh needs to be 17 characters